--- a/SCME.UI/PagesUser/LoginPage.xaml
+++ b/SCME.UI/PagesUser/LoginPage.xaml
@@ -36,7 +36,7 @@
                 Background="{StaticResource xPurple1}"
                 Margin="0,0,0,0" />
 
-        <customControls:ListViewMouseLeftButtonScroll x:Name="accountsListBox"
+        <customControls:ListViewMouseLeftButtonScroll x:Name="accountsListBox" ScrollViewer.CanContentScroll="False"
                                 Grid.Column="0" Grid.Row="0" Grid.RowSpan="4" Style="{StaticResource DefaultListView}"
                                 SelectionChanged="AccountsListBox_OnSelectionChanged">
             <ListView.ItemTemplate>
@@ -46,7 +46,7 @@
             </ListView.ItemTemplate>
         </customControls:ListViewMouseLeftButtonScroll>
 
-        <Label Grid.Column="1" Grid.Row="1"
+        <Label Grid.Column="1" Grid.Row="1" Foreground="White"
                Content="{x:Static res:Resources.EnterPassword}"
                FontSize="36" Margin="120,0,0,0" />
 
