--- a/SCME.WpfControlLibrary/CustomControls/DialogWindow.xaml
+++ b/SCME.WpfControlLibrary/CustomControls/DialogWindow.xaml
@@ -6,14 +6,14 @@
         xmlns:local="clr-namespace:SCME.WpfControlLibrary.CustomControls"
         xmlns:res="clr-namespace:SCME.WpfControlLibrary.Properties"
         AllowsTransparency="True"
-        Topmost="True"
+        Topmost="True" 
         WindowStyle="None" ResizeMode="NoResize"
         WindowStartupLocation="CenterScreen"
         Background="{StaticResource xGray2}"
         BorderBrush="{StaticResource BlueBrush}" BorderThickness="1"
         DataContext="{Binding RelativeSource={RelativeSource Self}}" Loaded="DialogWindow_OnLoaded"
-        mc:Ignorable="d" SizeToContent="WidthAndHeight"
-        Height="450" Width="800" MaxWidth="1280" MaxHeight="1024" d:DataContext="{d:DesignInstance local:DialogWindow}">
+        mc:Ignorable="d"
+        Height="450" Width="720" MaxWidth="1280" MaxHeight="1024" d:DataContext="{d:DesignInstance local:DialogWindow}">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -35,11 +35,11 @@
         <Label Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Content="{Binding Title}" BorderBrush="{StaticResource BlueBrush}" BorderThickness="0,0,0,1" />
 
         <ScrollViewer Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2">
-            <TextBlock Text="{Binding Message}" Background="Transparent" TextWrapping="Wrap" />
+            <TextBlock Text="{Binding Message}" Background="Transparent" TextWrapping="Wrap" VerticalAlignment="Center" HorizontalAlignment="Center" />
         </ScrollViewer>
 
-        <Button Grid.Column="0" Grid.Row="2" IsDefault="True" Command="{Binding OkCommand}" Style="{StaticResource PrimaryButton}" Content="{x:Static res:Resources.Ok}" />
-        <Button Grid.Column="1" Grid.Row="2" Visibility="{Binding IsShowCancelButton, Converter={StaticResource B2V}}" IsCancel="True" Command="{Binding CancelCommand}" Style="{StaticResource PrimaryButton}" Content="{x:Static res:Resources.Cancel}" />
+        <Button Grid.Column="0" Grid.Row="2" IsDefault="True" Command="{Binding OkCommand}" Style="{StaticResource PrimaryButton}" Content="{x:Static res:Resources.Ok}" HorizontalAlignment="Left"/>
+        <Button Grid.Column="1" Grid.Row="2" Visibility="{Binding IsShowCancelButton, Converter={StaticResource B2V}}" IsCancel="True" Command="{Binding CancelCommand}" HorizontalAlignment="Right" Style="{StaticResource PrimaryButton}" Content="{x:Static res:Resources.Cancel}" />
 
     </Grid>
 </Window>
