--- a/SCME.WpfControlLibrary/Pages/SSRTUPage.xaml
+++ b/SCME.WpfControlLibrary/Pages/SSRTUPage.xaml
@@ -27,7 +27,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
-        <Grid Grid.Row="1" >
+        <Grid Grid.Row="1" Margin="50,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"  />
                 <ColumnDefinition Width="1.1*" />
@@ -39,7 +39,7 @@
             <ComboBox Grid.Column="1" DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM}"
                       ItemsSource="{Binding Source={StaticResource DutPackageType}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding DutPackageType}"/>
         </Grid>
-        <TabControl Grid.Row="2" Background="Transparent" Name="MainTabControl" BorderThickness="0">
+        <TabControl Grid.Row="2" Background="Transparent" Name="MainTabControl" BorderThickness="0" Margin="50,0">
             <TabControl.Resources>
                 <Style TargetType="TabItem">
                     <Setter Property="Height" Value="0"/>
@@ -59,10 +59,14 @@
                 <testParameters:ProhibitionVoltageTemplate DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM}"/>
             </TabItem>
         </TabControl>
-        <Grid Grid.Row="3" >
+        <Grid Grid.Row="3" Margin="50,50,50,0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"  />
@@ -71,16 +75,64 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="1.1*" />
             </Grid.ColumnDefinitions>
-            <TextBlock Name="TextBlockValueName" />
-            <TextBlock Grid.Column="1" HorizontalAlignment="Right" Name="LabelValue" Text="{Binding Result, StringFormat=N1}"/>
             
-            <TextBlock Grid.Column="0" Grid.Row="1" Text="Ток вспомогательного питания 1" Margin="0,0,30,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliaryVoltagePowerSupply1, Converter={StaticResource B2V}}"/>
+            <!--<TextBlock Grid.Column="0" Grid.Row="1" Text="Ток вспомогательного питания 1" Margin="0,0,30,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliaryVoltagePowerSupply1, Converter={StaticResource B2V}}"/>
             <TextBlock Grid.Column="1" Grid.Row="1" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliaryVoltagePowerSupply1, Converter={StaticResource B2V}}" 
-                       Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.ShowAuxiliaryCurrentPowerSupply1}" HorizontalAlignment="Right"/>
+                       Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.AuxiliaryCurrentPowerSupply1}" HorizontalAlignment="Right"/>
             
-            <TextBlock Grid.Column="3" Grid.Row="1" Text="Ток вспомогательного питания 2" Margin="0,0,30,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliaryVoltagePowerSupply2, Converter={StaticResource B2V}}"/>
-            <TextBlock Grid.Column="4" Grid.Row="1" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliaryVoltagePowerSupply2, Converter={StaticResource B2V}}" 
-                       Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.ShowAuxiliaryCurrentPowerSupply2}" HorizontalAlignment="Right"/>
+            <TextBlock Grid.Column="0" Grid.Row="2" Text="Ток вспомогательного питания 2" Margin="0,0,30,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliaryVoltagePowerSupply2, Converter={StaticResource B2V}}"/>
+            <TextBlock Grid.Column="1" Grid.Row="2" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliaryVoltagePowerSupply2, Converter={StaticResource B2V}}" 
+                       Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.AuxiliaryCurrentPowerSupply2}" HorizontalAlignment="Right"/>-->
+
+            <TextBlock Grid.Column="0" Grid.Row="0" Text="Ток утечки на выходе, мА" Margin="0,0,0,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.ShowOutputLeakageCurrent, Converter={StaticResource B2VH}}"/>
+            <TextBlock Grid.Column="1" Grid.Row="0" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.ShowOutputLeakageCurrent, Converter={StaticResource B2VH}}" 
+                       Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.Result, Converter={StaticResource DML}}" HorizontalAlignment="Right"/>
+
+            <TextBlock Grid.Column="0" Grid.Row="1" Text="Выходное остаточное напряжение, мВ" Margin="0,0,0,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.ShowOutputResidualVoltage, Converter={StaticResource B2VH}}"/>
+            <TextBlock Grid.Column="1" Grid.Row="1" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.ShowOutputResidualVoltage, Converter={StaticResource B2VH}}" 
+                       Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.Result, Converter={StaticResource DML}}" HorizontalAlignment="Right"/>
+
+            <Grid Grid.Row="2" Grid.ColumnSpan="2" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.ShowInputOptions, Converter={StaticResource B2VH}}">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"  />
+                    <ColumnDefinition Width="1.1*" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Column="0" Grid.Row="0" Text="Ток входа, мА" Margin="0,0,0,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowVoltage, Converter={StaticResource B2VH}}"/>
+                <TextBlock Grid.Column="1" Grid.Row="0" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowVoltage, Converter={StaticResource B2VH}}" 
+                           Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.Result, Converter={StaticResource DML}}" HorizontalAlignment="Right"/>
+
+                <TextBlock Grid.Column="0" Grid.Row="1" Text="Напряжение входа, мВ" Margin="0,0,0,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAmperage, Converter={StaticResource B2VH}}"/>
+                <TextBlock Grid.Column="1" Grid.Row="1" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAmperage, Converter={StaticResource B2VH}}" 
+                       Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.Result, Converter={StaticResource DML}}" HorizontalAlignment="Right"/>
+            </Grid>
+
+
+            <TextBlock Grid.Column="0" Grid.Row="3" Text="Сопротивление в открытом состоянии, Ом" Margin="0,0,30,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.OpenState, Converter={StaticResource B2VH}}"/>
+            <TextBlock Grid.Column="1" Grid.Row="3" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.OpenState, Converter={StaticResource B2VH}}" 
+                       Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.OpenResistance, Converter={StaticResource DML}}" HorizontalAlignment="Right"/>
+
+            <TextBlock Grid.Column="0" Grid.Row="4" Text="Ток вспомогательного питания 1, мА" Margin="0,0,30,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliarySupplyCurrent1, Converter={StaticResource B2VH}}"/>
+            <TextBlock Grid.Column="1" Grid.Row="4" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliarySupplyCurrent1, Converter={StaticResource B2VH}}" 
+                       Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.AuxiliaryCurrentPowerSupply1, Converter={StaticResource DML}}" HorizontalAlignment="Right"/>
+
+            <TextBlock Grid.Column="0" Grid.Row="5" Text="Ток вспомогательного питания 2, мА" Margin="0,0,30,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliarySupplyCurrent2, Converter={StaticResource B2VH}}"/>
+            <TextBlock Grid.Column="1" Grid.Row="5" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliarySupplyCurrent2, Converter={StaticResource B2VH}}" 
+                       Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.AuxiliaryCurrentPowerSupply2, Converter={StaticResource DML}}" HorizontalAlignment="Right"/>
+            
+            <!--<TextBlock Grid.Column="0" Grid.Row="4" TextWrapping="Wrap">
+                Ток вспом. питания 1, мА
+            </TextBlock>
+            <TextBlock Grid.Column="1" Grid.Row="4"   Text="{Binding AuxiliaryCurrentPowerSupply1}"   />
+
+            <TextBlock  Grid.Column="0" Grid.Row="5" TextWrapping="Wrap">
+                        Ток вспом. питания 2, мА
+            </TextBlock>
+            <TextBlock Grid.Column="1" Grid.Row="5"   Text="{Binding AuxiliaryCurrentPowerSupply2}"   />-->
+
         </Grid>
 
         <Grid Grid.Row="5" >
