--- a/SCME.WpfControlLibrary/Styles/ScrollBar.xaml
+++ b/SCME.WpfControlLibrary/Styles/ScrollBar.xaml
@@ -8,9 +8,9 @@
 
 
 
-    <GridLength x:Key="ListBoxScrollWidth">50</GridLength>
+    <GridLength x:Key="ListBoxScrollWidth">10</GridLength>
 
-  
+
 
     <Style x:Key="ScrollBarThumb" TargetType="{x:Type Thumb}">
         <Setter Property="OverridesDefaultStyle" Value="True" />
@@ -103,17 +103,13 @@
                                             <RowDefinition Height="*" />
                                             <RowDefinition Height="Auto" />
                                         </Grid.RowDefinitions>
-                                        <RepeatButton Grid.Row="0" Command="ScrollBar.LineUpCommand"
-                                                          Content="M 0 1 L 1 0 L 2 1"
-                                                          Margin="0,0,0,1" Style="{StaticResource ScrollBarLineButton}"
-                                                          Height="{Binding Source={StaticResource ListBoxScrollWidth}, Converter={StaticResource G2L}}"/>
-                                        <Track Grid.Row="1" Name="PART_Track" IsDirectionReversed="true">
+                                        <Track Grid.Row="1" Name="PART_Track" IsDirectionReversed="true" ViewportSize="NaN">
                                             <Track.DecreaseRepeatButton>
                                                 <RepeatButton Style="{StaticResource ScrollBarPageButton}"
                                                                   Command="ScrollBar.PageUpCommand" />
                                             </Track.DecreaseRepeatButton>
                                             <Track.Thumb>
-                                                <Thumb Background="{StaticResource PurpleBrush1}"
+                                                <Thumb Background="{StaticResource PurpleBrush1}" MinHeight="50"
                                                            Style="{StaticResource ScrollBarThumb}" />
                                             </Track.Thumb>
                                             <Track.IncreaseRepeatButton>
@@ -121,10 +117,6 @@
                                                                   Command="ScrollBar.PageDownCommand" />
                                             </Track.IncreaseRepeatButton>
                                         </Track>
-                                        <RepeatButton Grid.Row="2" Command="ScrollBar.LineDownCommand"
-                                                          Content="M 0 0 L 1 1 L 2 0"
-                                                          Margin="0,1,0,0" Style="{StaticResource ScrollBarLineButton}"
-                                                          Height="{Binding Source={StaticResource ListBoxScrollWidth}, Converter={StaticResource G2L}}" />
                                     </Grid>
                                 </ControlTemplate>
                             </ScrollBar.Template>
@@ -246,40 +238,40 @@
 
     <ControlTemplate x:Key="VerticalScrollBar" TargetType="{x:Type ScrollBar}">
         <Grid Background="White">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="{StaticResource ListBoxScrollWidth}" />
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="Auto" />
-                    </Grid.RowDefinitions>
-                    <RepeatButton Grid.Row="0" Command="ScrollBar.LineUpCommand"
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="{StaticResource ListBoxScrollWidth}" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <RepeatButton Grid.Row="0" Command="ScrollBar.LineUpCommand"
                                                           Content="M 0 1 L 1 0 L 2 1"
                                                           Margin="0,0,0,1" Style="{StaticResource ScrollBarLineButton}"
                                                           Height="{Binding Source={StaticResource ListBoxScrollWidth}, Converter={StaticResource G2L}}"/>
-                    <Track Grid.Row="1" Name="PART_Track" IsDirectionReversed="true">
-                        <Track.DecreaseRepeatButton>
-                            <RepeatButton Style="{StaticResource ScrollBarPageButton}"
+            <Track Grid.Row="1" Name="PART_Track" IsDirectionReversed="true">
+                <Track.DecreaseRepeatButton>
+                    <RepeatButton Style="{StaticResource ScrollBarPageButton}"
                                                                   Command="ScrollBar.PageUpCommand" />
-                        </Track.DecreaseRepeatButton>
-                        <Track.Thumb>
-                            <Thumb Background="{StaticResource PurpleBrush1}"
+                </Track.DecreaseRepeatButton>
+                <Track.Thumb>
+                    <Thumb Background="{StaticResource PurpleBrush1}"
                                                            Style="{StaticResource ScrollBarThumb}" />
-                        </Track.Thumb>
-                        <Track.IncreaseRepeatButton>
-                            <RepeatButton Style="{StaticResource ScrollBarPageButton}"
+                </Track.Thumb>
+                <Track.IncreaseRepeatButton>
+                    <RepeatButton Style="{StaticResource ScrollBarPageButton}"
                                                                   Command="ScrollBar.PageDownCommand" />
-                        </Track.IncreaseRepeatButton>
-                    </Track>
-                    <RepeatButton Grid.Row="2" Command="ScrollBar.LineDownCommand"
+                </Track.IncreaseRepeatButton>
+            </Track>
+            <RepeatButton Grid.Row="2" Command="ScrollBar.LineDownCommand"
                                                           Content="M 0 0 L 1 1 L 2 0"
                                                           Margin="0,1,0,0" Style="{StaticResource ScrollBarLineButton}"
                                                           Height="{Binding Source={StaticResource ListBoxScrollWidth}, Converter={StaticResource G2L}}" />
-                </Grid>
-            </ControlTemplate>
+        </Grid>
+    </ControlTemplate>
 
- 
+
 
     <!--<Style  TargetType="{x:Type ScrollViewer}" x:Key="DefaultScrollViewer1" BasedOn="{StaticResource {x:Type ScrollViewer}}">
         <Setter Property="Template">
@@ -314,7 +306,7 @@
             </Setter.Value>
         </Setter>
     </Style>-->
-    
+
 
 
 </ResourceDictionary>
